data is fetched to template

--- a/pos_custom_invoice_report/views/report_template.xml
+++ b/pos_custom_invoice_report/views/report_template.xml
@@ -7,47 +7,82 @@
             <xpath expr="//address" position="replace">
             </xpath>
             <xpath expr="//div[hasclass('page')]" position="replace">
+                <t t-set="o" t-value="o.with_context({'lang': lang})"/>
                 <link rel="stylesheet" type="text/css" href="/pos_custom_invoice_report/static/src/css/custom_report.css"/>
-                <div style="width:200px;" class="top-block">kek</div>
-                <div style="width:400px;margin-left:10px;" class="top-block">kek</div>
-                <div style="width:200px;margin-left:10px;" class="top-block">kek</div>
+                <div style="width:200px;text-align:right;font-size:11px;padding-right:5px;" class="top-block"></div>
+                <div style="width:400px;margin-left:10px;" class="top-block">
+                    <table style="width:100%;text-align:left;font-size:11px;">
+                        <tr><td>Fecha: <t t-esc="o.date_invoice"/></td><td>RUC: <span t-field="o.number"/></td></tr>
+                        <tr><td>Cliente: <t t-esc="o.partner_id.name"/></td><td></td></tr>
+                        <tr><td colspan="2">Dirección: <t t-esc="o.partner_id.street"/> <t t-esc="o.partner_id.city"/> <t t-esc="o.partner_id.country_id.name"/></td></tr>
+                        <tr><td>Teléfono: <t t-esc="o.partner_id.phone"/></td><td>Vendedor:</td></tr>
+                        <tr><td colspan="2">Cond. de Venta: Contado <span class="checkbox-t"/> Crédito <span class="checkbox-t"/> Remisión No</td></tr>
+                   </table>
+                </div>
+                <div style="width:200px;margin-left:10px;" class="top-block">
+                    <table style="width:100%;text-align:center;font-size:9px;">
+                        <tr><td>TIMBRADO №</td></tr>
+                        <tr><td>Fecha Inicio Vigencia:</td></tr>
+                        <tr><td>Fecha Fin Vigencia:</td></tr>
+                        <tr><td>RUC:</td></tr>
+                        <tr><td style="font-size:14px;font-weight:bold;">FACTURA</td></tr>
+                        <tr><td style="font-size:14px;text-align:left;">001-001</td></tr>
+                   </table>
+                </div>
                 <div style="clear:both"/>
                 <div class="table-container">
                     <table class="table-b0 " cellpadding="4" cellspacing="1">
-                          <tr class="tr-tlr table-header">
-                             <th style="width:50px;" class="cell-tl">CANTIDAD</th>
-                             <th style="width:250px;" class="cell-t">DESCRIPCION</th>
-                             <th style="width:80px;" class="cell-t">PRECIO UNITARIO</th>
-                             <th style="width:50px;" class="cell-t">EXENTAS</th>
-                             <th style="width:60px;" class="cell-t">IVA 5%</th>
-                             <th style="width:70px;" class="cell-tr">IVA 10%</th>
-                          </tr>
-                          <tr class="tr-lr">
-                             <th class="cell-l">Company</th>
-                             <th class="cell-b4">Q1</th>
-                             <th class="cell-b4">Q2</th>
-                             <th class="cell-b4">Q3</th>
-                             <th class="cell-b4">Q4</th>
-                             <th class="cell-r">Q4</th>
-                          </tr>
-                          <tr class="tr-b0">
-                             <th colspan="2" class="cell-b0"><strong>TOTAL A PAGAR</strong> (en letras) guaraníes:</th>
-                             <th class="cell-b4">SUB-TOTALES</th>
-                             <th class="cell-b4"> </th>
-                             <th class="cell-b4"> </th>
-                             <th class="cell-r"> </th>
-                          </tr>
-                          <tr class="tr-b0">
-                             <th colspan="4" class="cell-b0"> </th>
-                             <th class="cell-b4">TOTAL A PAGAR</th>
-                             <th class="cell-r"> </th>
-                          </tr>
-                          <tr class="tr-b0">
-                             <th colspan="6" class="cell-b0"> </th>
-                          </tr>
-                          <tr class="tr-b0">
-                             <th colspan="6" class="cell-b0">Liquidación del IVA: (5%)     Liquidación del IVA: (10%)    Total del IVA:</th>
-                          </tr>
+                        <tr class="tr-tlr table-header">
+                            <td style="width:50px;" class="cell-tl">CANTIDAD</td>
+                            <td style="width:250px;" class="cell-t">DESCRIPCION</td>
+                            <td style="width:80px;" class="cell-t">PRECIO UNITARIO</td>
+                            <td style="width:50px;" class="cell-t">EXENTAS</td>
+                            <td style="width:60px;" class="cell-t">IVA 5%</td>
+                            <td style="width:70px;" class="cell-tr">IVA 10%</td>
+                        </tr>
+                        <tr class="tr-lr">
+                            <td colspan="6">
+                            <table style="width:825px;">
+                            <t t-foreach="o.invoice_line_ids" t-as="line">
+                            <tr>
+                            <td style="width:50px;padding:5px;text-align:right;">
+                                <span t-field="line.quantity"/>
+                            </td>
+                            <td style="width:250px;padding:5px;">
+                                <span t-field="line.name"/>
+                            </td>
+                            <td style="width:80px;padding:5px;text-align:right;">
+                                <span t-field="line.price_unit" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                            </td>
+                            <td style="width:50px;"> </td>
+                            <td style="width:60px;"> </td>
+                            <td style="width:70px;padding:5px;text-align:right;">
+                                <span t-field="line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
+                                <span t-field="line.price_total" groups="account.group_show_line_subtotals_tax_included"/>
+                            </td>
+                            </tr>
+                            </t>
+                            </table>
+                            </td>
+                        </tr>
+                        <tr class="tr-b0">
+                            <td colspan="2" class="cell-b0"><strong>TOTAL A PAGAR</strong> (en letras) guaraníes:</td>
+                            <td class="cell-b4">SUB-TOTALES</td>
+                            <td class="cell-b4"> </td>
+                            <td class="cell-b4"> </td>
+                            <td class="cell-r"><span t-field="o.amount_total"/></td>
+                        </tr>
+                        <tr class="tr-b0">
+                            <td colspan="4" class="cell-b0"> </td>
+                            <td class="cell-b4">TOTAL A PAGAR</td>
+                            <td class="cell-r"><span t-field="o.amount_total"/></td>
+                        </tr>
+                        <tr class="tr-b0">
+                            <td colspan="6" class="cell-b0"> </td>
+                        </tr>
+                        <tr class="tr-b0">
+                            <td colspan="2" class="cell-b0">Liquidación del IVA: (5%)<span style="float:right;">Liquidación del IVA: (10%)<span t-esc="o.amount_by_group[0][3]"/></span></td><td colspan="2" class="cell-b0"></td><td colspan="2" class="cell-b0">Total del IVA: <span t-esc="o.amount_by_group[0][3]" /></td>
+                        </tr>
                     </table>
                 </div>
 
